--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	<script type='text/javascript' src='scripts/lib/indental.js'></script>
 	<script type='text/javascript' src='scripts/lib/tablatal.js'></script>
 
-  <script type='text/javascript' src='database/settings.ndtl'></script>
-  <script type='text/javascript' src='database/logbook.tbtl'></script>
+  <script type='text/javascript' src='../Assistant/database/settings.ndtl'></script>
+  <script type='text/javascript' src='../Assistant/database/logbook.tbtl'></script>
   
   <script type='text/javascript' src='scripts/interface/scores.js'></script>
   <script type='text/javascript' src='scripts/interface/balance.js'></script>  
